--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "Events++",
   "description": "Handle your events, to the maximum!",
-  "repository": "None",
+  "repository": "https://github.com/DanielBub/Eventspp.git",
   "logo": "https://cdn.rawgit.com/heroku/node-js-getting-started/master/public/node.svg",
   "keywords": ["node", "express", "heroku"],
   "image": "heroku/nodejs"
