--- a/package.json
+++ b/package.json
@@ -5,11 +5,23 @@
     "engines": {
     "node": "6.11.1"
   	},
+    "scripts": {
+    "start": "node main.js",
+    "test": "node test.js"
+    },
     "dependencies": {
         "express": "~4.0.0",
         "body-parser": "^1.17.2",
         "cookie-parser": "~1.4.3"
     },
+    "devDependencies": {
+    "request": "^2.81.0",
+    "tape": "^4.7.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/DanielBub/Eventspp.git"
+  },
     "keywords": [
     "node",
     "heroku",
