--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
-    "name": "eventspp",
-    "version": "0.1",
-    "main": "main.js",
-    "engines": {
-    "node": "6.11.1"
-  	},
-    "scripts": {
-    "start": "node main.js",
-    "test": "node test.js"
-    },
+  "name": "eventspp",
+  "version": "1.0.0",
+  "description": "Our events App!",
+  "main": "main.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/DanielBub/Eventspp.git"
+  },
     "dependencies": {
         "express": "*",
         "body-parser": "*",
         "cookie-parser": "*"
     },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/DanielBub/Eventspp.git"
-  }
+  "author": "Bublil",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/DanielBub/Eventspp/issues"
+  },
+  "homepage": "https://github.com/DanielBub/Eventspp#readme"
 }
